@@ -26,6 +26,25 @@ record(stringin, "$(P)$(R)CAMERA_INFO")
    field(SCAN, "I/O Intr")
 }
 
+record(longout, "$(P)$(R)CAMERA_READ_STAT")
+{
+   field(DTYP, "asynInt32")
+   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))CAMERA_READ_STAT")
+   field(SCAN, "5 second")
+}
+
+record(mbbi, "$(P)$(R)CAMERA_STATUS")
+{
+   field(DTYP, "asynInt32")
+   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))CAMERA_STATUS")
+   field(PINI, "NO")
+   field(ZRST, "Off")
+   field(ZRVL, "0")
+   field(ONST, "On")
+   field(ONVL, "1")
+   field(SCAN, "I/O Intr")
+}
+
 record(mbbo, "$(P)$(R)CAMERA_TRG")
 {
    field(DTYP, "asynInt32")
@@ -48,7 +67,6 @@ record(mbbi, "$(P)$(R)CAMERA_TRG_RBV")
    field(ONVL, "1")
    field(SCAN, "I/O Intr")
 }
-
 
 record(mbbo, "$(P)$(R)CAMERA_TRGPOL")
 {
